# neuroflow

./: .env.example  .env.example.clean  .gitignore  CONTRIBUTING.md  COOLIFY-DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.coolify-template.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  main.py
app/api/v1/: admin.py  chat.py
app/core/: auth.py  database.py  neo4j_init.py
app/models/: database.py  schemas.py
app/services/: ai_knowledge_service.py  flowise_service.py  memory_service.py  memory_service_graphiti.py
app/tasks/: celery_app.py  memory_tasks.py
scripts/: generate_keys.py  health_check.py  test_chat.py
