[tool.poetry]
name = "neuroflow"
version = "0.1.0"
description = "🧠 NeuroFlow - Microserviço inteligente com memória de grafos para potencializar agentes de IA"
authors = ["João Santos <limemarketingbr@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/theshibabasement/neuroflow"
repository = "https://github.com/theshibabasement/neuroflow"
keywords = ["ai", "memory", "graphiti", "flowise", "microservice", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.8.2"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-decouple = "^3.8"
httpx = "^0.25.2"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
redis = "^5.0.1"
celery = "^5.3.4"
graphiti-core = "^0.14.0"
neo4j = "^5.26.0"
structlog = "^25.4.0"
pydantic-settings = "^2.7.0"
openai = "^1.58.1"
tiktoken = "^0.8.0"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
